# FP_Haskell

./: README.md
HWKhaybullin11009/: CHANGELOG.md  HWKhaybullin11009.cabal
HWKhaybullin11009/lib/: ZipLong.hs
HWKhaybullin11009/src/: BinarySearchTree.hs
HWKhaybullin11009/tests/: BinarySearchTreeTest.hs  ZipLongTest.hs
