cabal-version:      2.4
name:               HWKhaybullin11009
version:            0.1.0.0
author:             Tagir
maintainer:         tagir2911@mail.ru
extra-source-files: CHANGELOG.md

executable HWKhaybullin11009
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

library HWKhaybullin11009-lib
    exposed-modules: ZipLong
    hs-source-dirs: lib
    build-depends: base ^>=4.16.4.0
    default-language: Haskell2010

test-suite HWKhaybullin11009-tests
    type: exitcode-stdio-1.0
    main-is: ZipLongTest.hs
    build-depends: base ^>=4.16.4.0, HUnit ^>=1.6, HWKhaybullin11009-lib
    hs-source-dirs: tests
    default-language: Haskell2010